force-app/main/default/objects/EventConfiguration__mdt/EventConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Configuração do evento</description>
    <label>EventConfiguration</label>
    <pluralLabel>EventConfigurations</pluralLabel>
</CustomObject>