force-app/main/default/objects/EventConfiguration__mdt/fields/CommandClassName__c.field-meta.xml
<CustomField>
    <fullName>CommandClassName__c</fullName>
    <description>Nome da classe responsável por implementar a Interface Command</description>
    <label>CommandClassName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>