force-app/main/default/objects/EventConfiguration__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to block event execution</description>
    <label>Disbled</label>
    <type>Checkbox</type>
</CustomField>