force-app/main/default/objects/EventConfiguration__mdt/fields/EnableTraceLog__c.field-meta.xml
<CustomField>
    <fullName>EnableTraceLog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Habilita o armazenamento de Log para esse evento, assim como dados da request e response para eventos de outbound</description>
    <label>EnableTraceLog</label>
    <type>Checkbox</type>
</CustomField>