force-app/main/default/objects/EventConfiguration__mdt/fields/OAuthEventName__c.field-meta.xml
<CustomField>
    <fullName>OAuthEventName__c</fullName>
    <description>Use this field to specify Event Name for Custom Authentication flow</description>
    <label>OAuthEventName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>