force-app/main/default/objects/EventConfiguration__mdt/fields/OutboundConfig__c.field-meta.xml
<CustomField>
    <fullName>OutboundConfig__c</fullName>
    <description>Outbound Config</description>
    <label>Event Outbound Configuration</label>
    <referenceTo>EventOutboundConfig__mdt</referenceTo>
    <relationshipLabel>EventConfigurations</relationshipLabel>
    <relationshipName>EventConfigurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>