force-app/main/default/objects/EventConfiguration__mdt/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Identify the number of retries for this event</description>
    <label>Retry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>